[package]
name = "svg-alchemy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_log = "1.0.0"
js-sys = "0.3.65"
log = "0.4.20"
lyon = "1.0.1"
serde-wasm-bindgen = "0.6.1"
serde_json = "1.0.108"
tiny-skia-path = "0.11.2"
usvg = "0.36.0"
usvg-parser = "0.36.0"
usvg-text-layout = "0.36.0"
usvg-tree = "0.36.0"
wasm-bindgen = "0.2.88"
xmlwriter = "0.1.0"
